--- a/Analog/Base.lproj/Main.storyboard
+++ b/Analog/Base.lproj/Main.storyboard
@@ -34,8 +34,8 @@
                                                 <constraint firstAttribute="height" constant="47.5" id="Kck-5z-vhS"/>
                                             </constraints>
                                         </imageView>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iIk-3s-4jl">
-                                            <rect key="frame" x="70" y="15" width="51.5" height="25.5"/>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Undefined Camera" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iIk-3s-4jl">
+                                            <rect key="frame" x="70" y="15" width="176.5" height="25.5"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="21"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
@@ -89,6 +89,7 @@
                                     </constraints>
                                 </tableViewCellContentView>
                                 <connections>
+                                    <outlet property="cameraLabel" destination="iIk-3s-4jl" id="9b8-Pi-5mr"/>
                                     <outlet property="dateLabel" destination="Z3g-Pl-OkE" id="ODb-8b-07J"/>
                                     <outlet property="filmInfoDescriptionLabel" destination="vA3-ht-Z7P" id="8P8-t4-cWC"/>
                                     <outlet property="filmTypeImage" destination="gMF-zE-oD2" id="mRk-kr-cpp"/>
@@ -177,7 +178,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <searchBar contentMode="redraw" placeholder="Search (e.g. Kodak Ektar 100)" showsCancelButton="YES" showsScopeBar="YES" translatesAutoresizingMaskIntoConstraints="NO" id="o2s-dc-a2I">
-                                <rect key="frame" x="0.0" y="183" width="375" height="88"/>
+                                <rect key="frame" x="0.0" y="227" width="375" height="88"/>
                                 <color key="tintColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences" autocorrectionType="no" spellCheckingType="no" keyboardType="alphabet" returnKeyType="done" enablesReturnKeyAutomatically="YES"/>
                                 <scopeButtonTitles>
@@ -186,15 +187,14 @@
                                 </scopeButtonTitles>
                             </searchBar>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="What film are you using?" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3le-ht-K0g">
-                                <rect key="frame" x="16" y="140" width="343" height="28"/>
+                                <rect key="frame" x="16" y="184" width="343" height="28"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="23"/>
                                 <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="t2S-0k-FpY">
-                                <rect key="frame" x="0.0" y="271" width="375" height="396"/>
+                                <rect key="frame" x="0.0" y="315" width="375" height="352"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <inset key="separatorInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="searchResultCell" textLabel="K70-UH-x94" style="IBUITableViewCellStyleDefault" id="C6Z-f8-AXs">
                                         <rect key="frame" x="0.0" y="28" width="375" height="44"/>
@@ -409,7 +409,7 @@
                         <barButtonItem key="rightBarButtonItem" systemItem="done" id="jmE-LV-Ywk">
                             <color key="tintColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                             <connections>
-                                <segue destination="8Fo-3M-jsD" kind="show" identifier="backToHomeSegue" id="Zzr-k0-fTb"/>
+                                <action selector="doneButtonTriggered:" destination="mnA-cB-U5G" id="61U-Vg-Azp"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
@@ -419,6 +419,7 @@
                         <outlet property="filmImage" destination="1J7-9i-6g5" id="SUJ-Ai-kKn"/>
                         <outlet property="filmTextField" destination="1mL-dt-uZM" id="TFe-E3-4je"/>
                         <outlet property="scrollView" destination="ivx-Rs-E6I" id="rpP-fk-eq8"/>
+                        <segue destination="8Fo-3M-jsD" kind="show" identifier="backToHomeSegue" id="qbV-1q-PqA"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="9Hs-R1-qUT" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -438,13 +439,22 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Film, Frame and Sensitivity should not be none or 0" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HhX-rc-tec">
-                                <rect key="frame" x="12" y="60" width="350.5" height="18"/>
+                                <rect key="frame" x="12" y="104" width="350.5" height="18"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                 <color key="textColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Your custom film name has the same name as one of the pre-defined rolls, go back and do a search" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="165-en-31f">
+                                <rect key="frame" x="27" y="84" width="320" height="61"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="320" id="3rd-Gj-xjY"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleAspectFit" showsHorizontalScrollIndicator="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uKJ-he-J6Z">
-                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
+                                <rect key="frame" x="0.0" y="64" width="375" height="603"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="equalSpacing" alignment="top" spacing="90" translatesAutoresizingMaskIntoConstraints="NO" id="Lyl-u5-FB7">
                                         <rect key="frame" x="26" y="90" width="323" height="400"/>
@@ -468,7 +478,7 @@
                                                                 <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                                                                 <nil key="highlightedColor"/>
                                                             </label>
-                                                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Tap to edit" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="rvr-db-Z6u">
+                                                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Tap to edit" textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="rvr-db-Z6u">
                                                                 <rect key="frame" x="0.0" y="33" width="255" height="28"/>
                                                                 <constraints>
                                                                     <constraint firstAttribute="width" constant="255" id="BZw-aA-hcs"/>
@@ -584,15 +594,18 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="uKJ-he-J6Z" firstAttribute="top" secondItem="ghx-wM-KWm" secondAttribute="bottom" id="6V1-Qe-8jY"/>
-                            <constraint firstItem="HhX-rc-tec" firstAttribute="top" secondItem="ghx-wM-KWm" secondAttribute="bottom" constant="40" id="SgY-el-4Pq"/>
+                            <constraint firstItem="165-en-31f" firstAttribute="centerX" secondItem="PpL-aA-RPy" secondAttribute="centerX" id="UEw-F1-upm"/>
+                            <constraint firstItem="165-en-31f" firstAttribute="top" secondItem="ghx-wM-KWm" secondAttribute="bottom" constant="20" id="VQu-SK-FMz"/>
                             <constraint firstAttribute="trailing" secondItem="uKJ-he-J6Z" secondAttribute="trailing" id="fzh-26-gq0"/>
                             <constraint firstItem="uKJ-he-J6Z" firstAttribute="leading" secondItem="PpL-aA-RPy" secondAttribute="leading" id="len-2u-R1M"/>
+                            <constraint firstItem="HhX-rc-tec" firstAttribute="top" secondItem="ghx-wM-KWm" secondAttribute="bottom" constant="40" id="m77-3g-xzN"/>
                             <constraint firstItem="HhX-rc-tec" firstAttribute="centerX" secondItem="PpL-aA-RPy" secondAttribute="centerX" id="mAn-GP-96g"/>
                             <constraint firstItem="uKJ-he-J6Z" firstAttribute="bottom" secondItem="aWS-u1-ywh" secondAttribute="top" id="wXH-9w-BNs"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="Customize Roll" id="99J-sj-qfn"/>
                     <connections>
+                        <outlet property="conflictWarningLabel" destination="165-en-31f" id="FOo-Vx-jxE"/>
                         <outlet property="filmTextField" destination="rvr-db-Z6u" id="UAU-eL-4Za"/>
                         <outlet property="filmTypeImage" destination="blY-zp-sGT" id="bxB-h7-vy1"/>
                         <outlet property="filmTypeSegment" destination="CCc-5K-kVn" id="1UI-Hj-wYj"/>
@@ -651,7 +664,7 @@
         <image name="disclosure indicator" width="8" height="13"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="Zzr-k0-fTb"/>
-        <segue reference="Kz5-Xo-go3"/>
+        <segue reference="qbV-1q-PqA"/>
+        <segue reference="P8w-o8-lL5"/>
     </inferredMetricsTieBreakers>
 </document>
