--- a/Analog/Base.lproj/Main.storyboard
+++ b/Analog/Base.lproj/Main.storyboard
@@ -394,34 +394,60 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="VNo-nd-mEm">
+                                <rect key="frame" x="0.0" y="607" width="375" height="60"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="60" id="Afd-lh-B1g"/>
+                                </constraints>
+                                <items>
+                                    <barButtonItem width="300" style="plain" id="sa1-pc-5iU">
+                                        <slider key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="1" minValue="1" maxValue="99" id="1Pg-7g-fmE">
+                                            <rect key="frame" x="14" y="14.5" width="300" height="31"/>
+                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                            <connections>
+                                                <action selector="sliderEditingBegin:" destination="p11-OD-ebE" eventType="touchDown" id="59P-kD-F2b"/>
+                                                <action selector="sliderEditingEnd:" destination="p11-OD-ebE" eventType="touchUpOutside" id="XQu-gX-Rjt"/>
+                                                <action selector="sliderEditingEnd:" destination="p11-OD-ebE" eventType="touchUpInside" id="akh-tB-3VP"/>
+                                                <action selector="sliderValueChanged:" destination="p11-OD-ebE" eventType="valueChanged" id="o4G-zb-WOs"/>
+                                            </connections>
+                                        </slider>
+                                    </barButtonItem>
+                                    <barButtonItem style="plain" id="EmC-Cu-k1S">
+                                        <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="296-xr-flW">
+                                            <rect key="frame" x="324" y="15" width="46" height="30"/>
+                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                            <state key="normal" title="Back"/>
+                                            <connections>
+                                                <action selector="sliderBackButtonTapped:" destination="p11-OD-ebE" eventType="touchUpInside" id="QdC-QF-fFg"/>
+                                            </connections>
+                                        </button>
+                                    </barButtonItem>
+                                </items>
+                            </toolbar>
                             <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="center" translatesAutoresizingMaskIntoConstraints="NO" id="rDW-t9-7nG">
-                                <rect key="frame" x="0.0" y="64" width="375" height="60"/>
+                                <rect key="frame" x="0.0" y="607" width="375" height="60"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="60" id="UnV-oG-CIo"/>
                                 </constraints>
                                 <items>
-                                    <barButtonItem width="150" style="plain" id="5XQ-Ab-Qq9">
-                                        <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="AR9-r2-ulp">
-                                            <rect key="frame" x="16" y="17" width="150" height="26"/>
+                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="X6N-2O-bGF"/>
+                                    <barButtonItem style="plain" id="LqX-qh-45F">
+                                        <stepper key="customView" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="1" minimumValue="1" maximumValue="36" id="aPB-ml-IZo">
+                                            <rect key="frame" x="140" y="15.5" width="94" height="29"/>
                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                            <state key="normal" image="Backward Button"/>
-                                            <state key="highlighted" image="Backward Selected"/>
                                             <connections>
-                                                <action selector="backwardButtonTapped:" destination="p11-OD-ebE" eventType="touchUpInside" id="0S5-ME-cnc"/>
-                                                <action selector="backwardButtonTapped:" destination="p11-OD-ebE" eventType="touchUpOutside" id="9NM-LW-1Lu"/>
+                                                <action selector="stepperValueChanged:" destination="p11-OD-ebE" eventType="valueChanged" id="YJA-s3-Bv9"/>
                                             </connections>
-                                        </button>
+                                        </stepper>
                                     </barButtonItem>
-                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="jjc-rC-cur"/>
-                                    <barButtonItem width="150" style="plain" id="cSh-sI-Un3">
-                                        <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="uMO-Ul-Jbu">
-                                            <rect key="frame" x="209" y="17" width="150" height="26"/>
+                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="fWk-vU-TBT"/>
+                                    <barButtonItem style="plain" id="h0a-BH-BHH">
+                                        <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="hPf-YS-NUv">
+                                            <rect key="frame" x="313" y="15" width="46" height="30"/>
                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                            <state key="normal" image="Forward Button"/>
-                                            <state key="highlighted" image="Forward Selected"/>
+                                            <state key="normal" title="Go to"/>
                                             <connections>
-                                                <action selector="forwardButtonTapped:" destination="p11-OD-ebE" eventType="touchUpInside" id="JcT-PU-H1z"/>
-                                                <action selector="forwardButtonTapped:" destination="p11-OD-ebE" eventType="touchUpOutside" id="dUz-9H-D5q"/>
+                                                <action selector="goToButtonTapped:" destination="p11-OD-ebE" eventType="touchUpInside" id="t2k-g6-aW3"/>
                                             </connections>
                                         </button>
                                     </barButtonItem>
@@ -429,13 +455,13 @@
                                 <color key="tintColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                             </toolbar>
                             <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="tzi-sK-GzV">
-                                <rect key="frame" x="0.0" y="124" width="375" height="543"/>
+                                <rect key="frame" x="0.0" y="64" width="375" height="543"/>
                                 <connections>
                                     <segue destination="rQ4-sw-Axj" kind="embed" identifier="frameEmbedSegue" id="zaf-eE-bjR"/>
                                 </connections>
                             </containerView>
-                            <view opaque="NO" alpha="0.84999999999999998" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="gbr-DQ-zW3">
-                                <rect key="frame" x="0.0" y="124" width="375" height="543"/>
+                            <view opaque="NO" alpha="0.90000000000000002" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="gbr-DQ-zW3">
+                                <rect key="frame" x="0.0" y="64" width="375" height="543"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="q4i-kD-3mZ">
                                         <rect key="frame" x="136" y="211" width="102" height="121"/>
@@ -458,14 +484,14 @@
                                 </constraints>
                             </view>
                             <imageView opaque="NO" userInteractionEnabled="NO" alpha="0.59999999999999998" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Index Background" translatesAutoresizingMaskIntoConstraints="NO" id="xUO-IR-yJ0">
-                                <rect key="frame" x="323" y="615" width="44" height="44"/>
+                                <rect key="frame" x="11" y="72" width="44" height="44"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="44" id="1zN-ak-4bT"/>
                                     <constraint firstAttribute="width" constant="44" id="FKd-CG-Xzr"/>
                                 </constraints>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" alpha="0.84999999999999998" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rHt-JL-ol3">
-                                <rect key="frame" x="323" y="615" width="44" height="44"/>
+                                <rect key="frame" x="11" y="72" width="44" height="44"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="44" id="L3i-l3-X1A"/>
                                     <constraint firstAttribute="height" constant="44" id="Rra-VR-uXp"/>
@@ -477,21 +503,24 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstAttribute="trailing" secondItem="rHt-JL-ol3" secondAttribute="trailing" constant="8" id="1vB-zu-TWF"/>
-                            <constraint firstItem="rDW-t9-7nG" firstAttribute="top" secondItem="YX3-nw-etk" secondAttribute="bottom" id="7RL-Pc-9dL"/>
-                            <constraint firstItem="tzi-sK-GzV" firstAttribute="top" secondItem="rDW-t9-7nG" secondAttribute="bottom" id="7lV-jY-EkW"/>
-                            <constraint firstItem="tzi-sK-GzV" firstAttribute="leading" secondItem="t7c-rX-0XI" secondAttribute="leading" id="AKu-hB-pBJ"/>
-                            <constraint firstAttribute="trailing" secondItem="tzi-sK-GzV" secondAttribute="trailing" id="Px2-Pu-ThK"/>
-                            <constraint firstAttribute="trailing" secondItem="gbr-DQ-zW3" secondAttribute="trailing" id="QEK-44-Vth"/>
-                            <constraint firstItem="aJo-cl-zoD" firstAttribute="top" secondItem="xUO-IR-yJ0" secondAttribute="bottom" constant="8" id="aKj-CM-ZSs"/>
-                            <constraint firstItem="gbr-DQ-zW3" firstAttribute="leading" secondItem="t7c-rX-0XI" secondAttribute="leading" id="hKx-sa-aOU"/>
-                            <constraint firstAttribute="trailing" secondItem="rDW-t9-7nG" secondAttribute="trailing" id="m9m-q9-3UC"/>
-                            <constraint firstItem="aJo-cl-zoD" firstAttribute="top" secondItem="tzi-sK-GzV" secondAttribute="bottom" id="nQc-dc-U3n"/>
-                            <constraint firstItem="aJo-cl-zoD" firstAttribute="top" secondItem="gbr-DQ-zW3" secondAttribute="bottom" id="qSh-Qa-pZT"/>
-                            <constraint firstItem="aJo-cl-zoD" firstAttribute="top" secondItem="rHt-JL-ol3" secondAttribute="bottom" constant="8" id="tyd-6r-V4v"/>
-                            <constraint firstAttribute="trailing" secondItem="xUO-IR-yJ0" secondAttribute="trailing" constant="8" id="vYO-Hy-dtm"/>
-                            <constraint firstItem="gbr-DQ-zW3" firstAttribute="top" secondItem="rDW-t9-7nG" secondAttribute="bottom" id="vbr-qP-GNm"/>
-                            <constraint firstItem="rDW-t9-7nG" firstAttribute="leading" secondItem="t7c-rX-0XI" secondAttribute="leading" id="yZt-eA-eMt"/>
+                            <constraint firstItem="aJo-cl-zoD" firstAttribute="top" secondItem="VNo-nd-mEm" secondAttribute="bottom" id="0nv-Ip-TAA"/>
+                            <constraint firstItem="rHt-JL-ol3" firstAttribute="leading" secondItem="t7c-rX-0XI" secondAttribute="leading" constant="11" id="5mH-6q-UKQ"/>
+                            <constraint firstItem="tzi-sK-GzV" firstAttribute="leading" secondItem="t7c-rX-0XI" secondAttribute="leading" id="B0A-qb-m7n"/>
+                            <constraint firstAttribute="trailing" secondItem="VNo-nd-mEm" secondAttribute="trailing" id="Gob-EC-2RW"/>
+                            <constraint firstItem="aJo-cl-zoD" firstAttribute="top" secondItem="rDW-t9-7nG" secondAttribute="bottom" id="Liw-ov-6xY"/>
+                            <constraint firstAttribute="trailing" secondItem="gbr-DQ-zW3" secondAttribute="trailing" id="My6-Y9-dq9"/>
+                            <constraint firstItem="gbr-DQ-zW3" firstAttribute="top" secondItem="YX3-nw-etk" secondAttribute="bottom" id="O0E-Dl-he0"/>
+                            <constraint firstItem="gbr-DQ-zW3" firstAttribute="leading" secondItem="t7c-rX-0XI" secondAttribute="leading" id="Q1B-CN-Bqh"/>
+                            <constraint firstItem="xUO-IR-yJ0" firstAttribute="top" secondItem="YX3-nw-etk" secondAttribute="bottom" constant="8" id="TdW-Uj-CFq"/>
+                            <constraint firstAttribute="trailing" secondItem="rDW-t9-7nG" secondAttribute="trailing" id="U2X-cN-KgY"/>
+                            <constraint firstItem="rDW-t9-7nG" firstAttribute="top" secondItem="gbr-DQ-zW3" secondAttribute="bottom" id="XVe-qh-Ibt"/>
+                            <constraint firstItem="rHt-JL-ol3" firstAttribute="top" secondItem="YX3-nw-etk" secondAttribute="bottom" constant="8" id="kpq-HB-8ce"/>
+                            <constraint firstItem="VNo-nd-mEm" firstAttribute="leading" secondItem="t7c-rX-0XI" secondAttribute="leading" id="m8V-pC-9ms"/>
+                            <constraint firstAttribute="trailing" secondItem="tzi-sK-GzV" secondAttribute="trailing" id="nsq-a5-ss2"/>
+                            <constraint firstItem="rDW-t9-7nG" firstAttribute="top" secondItem="tzi-sK-GzV" secondAttribute="bottom" id="ovt-3V-M7F"/>
+                            <constraint firstItem="rDW-t9-7nG" firstAttribute="leading" secondItem="t7c-rX-0XI" secondAttribute="leading" id="rrb-3M-bV3"/>
+                            <constraint firstItem="tzi-sK-GzV" firstAttribute="top" secondItem="YX3-nw-etk" secondAttribute="bottom" id="x2q-f9-DZn"/>
+                            <constraint firstItem="xUO-IR-yJ0" firstAttribute="leading" secondItem="t7c-rX-0XI" secondAttribute="leading" constant="11" id="xbP-LK-bZl"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="Untitled Roll" id="3a8-hn-JDc">
@@ -514,8 +543,12 @@
                         <outlet property="addFrameButton" destination="q4i-kD-3mZ" id="hcV-YO-YNR"/>
                         <outlet property="addFrameView" destination="gbr-DQ-zW3" id="Z4z-jW-zAD"/>
                         <outlet property="deleteFrameButton" destination="s9D-QD-3Uo" id="fOv-X0-ZJa"/>
+                        <outlet property="editToolBar" destination="rDW-t9-7nG" id="9ep-zE-WBN"/>
                         <outlet property="indexBackgroundBlack" destination="xUO-IR-yJ0" id="STp-dg-8MT"/>
                         <outlet property="indexLabel" destination="rHt-JL-ol3" id="KGn-yV-rEW"/>
+                        <outlet property="slider" destination="1Pg-7g-fmE" id="nUL-5F-LJl"/>
+                        <outlet property="stepper" destination="aPB-ml-IZo" id="hHv-bA-9xY"/>
+                        <outlet property="viewToolBar" destination="VNo-nd-mEm" id="ekw-Em-qNU"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="KgJ-eu-pGY" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -625,7 +658,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Zsh-24-lwj" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3081" y="751"/>
+            <point key="canvasLocation" x="3046" y="695"/>
         </scene>
         <!--Customize Roll-->
         <scene sceneID="3G0-eL-YVG">
@@ -864,12 +897,8 @@
         <image name="135" width="72" height="72"/>
         <image name="Add Frame Button" width="207" height="248"/>
         <image name="Add Frame Highlighted" width="207" height="248"/>
-        <image name="Backward Button" width="26" height="2"/>
-        <image name="Backward Selected" width="26" height="2"/>
         <image name="Camera" width="500" height="334"/>
         <image name="Exposure" width="269" height="269"/>
-        <image name="Forward Button" width="26" height="26"/>
-        <image name="Forward Selected" width="26" height="26"/>
         <image name="Frame" width="280" height="280"/>
         <image name="ISO" width="71" height="55"/>
         <image name="Index Background" width="38" height="38"/>
